--- a/src/App.css
+++ b/src/App.css
@@ -49,12 +49,28 @@ h1 {
   transition: opacity 1s;
 }
 .spark-api-button {
+  margin: 0 1vw;
+  min-width: 8em;
+  color: white;
+  background: rgb(27, 208, 249);
+  border: 1.5px solid rgb(27, 208, 249);
+  border-radius: 0.3em;
+  padding: 1vh 1.5vh;
+  font-size: 2vh;
+  font-weight: 600;
+  transition: color 0.5s, background 0.5s, border 0.5s;
+}
+.spark-api-button:hover {
+  cursor: pointer;
+  color: rgb(27, 208, 249);
+  background: white;
+  border: 1.5px solid rgb(255, 255, 255);
 }
 .container-spark-control {
   margin-top: 2vh;
   height: fit-content;
   display: flex;
   width: 100%;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: center;
 }
