--- a/src/components/styles/spark.css
+++ b/src/components/styles/spark.css
@@ -1,15 +1,17 @@
 .container-spark {
-  min-height: 24em;
-    border-radius: 1vh;
-    border: 1.5px solid rgb(27, 208, 249);
-    margin: 5% 15%;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  padding-top: 2.5em;
+  min-height: 20em;
+  border-radius: 1vh;
+  border: 1.5px solid rgb(27, 208, 249);
+  margin: 5% 15%;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-h1 {
-  width: 100%;
+.container-spark > h1 {
+  width: 70%;
+  height: -moz-fit-content;
   height: fit-content;
   padding: 0;
   margin: 0;
@@ -19,22 +21,25 @@ h1 {
   transition: opacity 1s;
 }
 .spark-api-button {
-  margin: 0 1vw;
-  min-width: 8em;
+  font-weight: bold;
+  font-weight: bold;
+  margin: 0 2%;
+  border-radius: 0.5vh;
   color: white;
-  background: rgb(27, 208, 249);
   border: 1.5px solid rgb(27, 208, 249);
-  border-radius: 0.3em;
-  padding: 1vh 1.5vh;
-  font-size: 2vh;
-  font-weight: 600;
-  transition: color 0.5s, background 0.5s, border 0.5s;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 1% 5%;
+  background: #1e1e1e;
+  font-size: 0.7em;
+  text-align: center;
+  transition: color 0.7s, background 0.7s, border 0.7s;
 }
 .spark-api-button:hover {
   cursor: pointer;
-  color: rgb(27, 208, 249);
-  background: white;
-  border: 1.5px solid rgb(255, 255, 255);
+  color: white;
+  background: rgb(27, 208, 249);
+  border: 1.5px solid #1e1e1e;
 }
 .container-spark-control {
   margin-top: 5vh;
