--- a/src/components/styles/spark.css
+++ b/src/components/styles/spark.css
@@ -9,16 +9,32 @@
   flex-direction: column;
   align-items: center;
 }
-.container-spark > h1 {
-  width: 70%;
-  height: -moz-fit-content;
-  height: fit-content;
+.container-spark-thunder-div {
+  opacity: 0;
+  transition: opacity 1s;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.container-spark-thunder-div > div {
+  width: fit-content;
+  margin-left: 2em;
+}
+.container-spark-thunder-img {
+  height: 3em;
+  border-radius: 15%;
+  background: rgb(27, 208, 249);
+  padding: 3% 4%;
+  transition: background s;
+
+}
+.container-spark-thunder-div > div > h1 {
+  width: fit-content;
   padding: 0;
   margin: 0;
   color: white;
   text-align: center;
-  opacity: 0;
-  transition: opacity 1s;
 }
 .spark-api-button {
   font-weight: bold;
