--- a/src/components/styles/cabinList.css
+++ b/src/components/styles/cabinList.css
@@ -1,10 +1,10 @@
 .container-list {
-  padding: 3vh;
+  padding: 3vh 5%;
   min-height: 24em;
   height: fit-content;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
-  margin: 5% 15%;
+  margin: 5% 10%;
   width: 70%;
   display: flex;
   flex-direction: column;
@@ -41,7 +41,7 @@ background: rgb(12, 99, 118);
 .container-list > div > div {
   border-radius: 1vh;
   padding: 2% 0;
-  margin: 1vh 0;
+  margin: 2vh 0;
   background: #2b2b2b;
   width: 80%;
   display: flex;
