--- a/src/components/styles/cabinOrder.css
+++ b/src/components/styles/cabinOrder.css
@@ -7,12 +7,12 @@
   }
 }
 .container-order {
-  padding: 3vh;
+  padding: 3vh 5%;
   min-height: 24em;
   height: fit-content;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
-  margin: 5% 15%;
+  margin: 5% 10%;
   width: 70%;
   display: flex;
   flex-direction: column;
