--- a/src/components/styles/cabinOrder.css
+++ b/src/components/styles/cabinOrder.css
@@ -33,7 +33,34 @@
   text-align: center;
   transition: color 0.7s, background 0.7s, border 0.7s;
 }
-.container-order > ul:nth-child(4) > li > button {
+.container-order > div:nth-child(3) {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.container-order > div:nth-child(3) > button > svg {
+  stroke-width: 1px;
+  font-size: 1em;
+}
+.container-order > div:nth-child(3) > button {
+  display: flex;
+  width: 12%;
+  font-weight: bold;
+  border-radius: 1vh;
+  color: white;
+  width: -moz-fit-content;
+  border: 1.5px solid rgb(27, 208, 249);
+  padding: 1% 1%;
+  background: #1e1e1e;
+  font-size: 0.8em;
+  text-align: center;
+  transition: color 0.7s, background 0.7s, border 0.7s;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.container-order > ul:nth-child(5) > li > button {
   animation: show 1s linear forwards;
 
   margin: 10%;
@@ -49,13 +76,14 @@
   text-align: center;
   transition: color 0.7s, background 0.7s, border 0.7s;
 }
-.container-order > ul:nth-child(2) > li > button:hover {
+.container-order > ul:nth-child(2) > li > button:hover,
+.container-order > div:nth-child(3) > button:hover {
   cursor: pointer;
   color: white;
   background: rgb(27, 208, 249);
   border: 1.5px solid #1e1e1e;
 }
-.container-order > ul:nth-child(4) > li > button:hover {
+.container-order > ul:nth-child(5) > li > button:hover {
   cursor: pointer;
   color: white;
   background: #1e1e1e;
@@ -79,7 +107,7 @@ h2 {
   align-content: center;
   align-items: center;
 }
-.container-order > ul:nth-child(4) {
+.container-order > ul:nth-child(5) {
   width: 80%;
   display: flex;
   padding: 0;
@@ -95,10 +123,9 @@ li {
   width: 10%;
 }
 
-
 @media screen and (max-width: 500px) {
   li {
-    width: 15%;
+    width: 20%;
   }
   .container-order > ul:nth-child(2) {
     width: 90%;
@@ -112,7 +139,23 @@ li {
     align-content: center;
     align-items: center;
   }
-  .container-order > ul:nth-child(4) {
+  .container-order > div:nth-child(3) > button {
+    display: flex;
+    width: 30%;
+    font-weight: bold;
+    border-radius: 0.7vh;
+    color: white;
+    width: -moz-fit-content;
+    border: 1.5px solid rgb(27, 208, 249);
+    padding: 2% 1%;
+    background: #1e1e1e;
+    font-size: 0.8em;
+    text-align: center;
+    transition: color 0.7s, background 0.7s, border 0.7s;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .container-order > ul:nth-child(5) {
     width: 100%;
     display: flex;
     padding: 0;
@@ -123,5 +166,48 @@ li {
     justify-content: flex-start;
     align-content: center;
     align-items: center;
+  }
+  .container-order {
+    padding: 3vh 5%;
+    min-height: 55vh;
+    height: -moz-fit-content;
+    height: fit-content;
+    border-radius: 1vh;
+    border: 1.5px solid rgb(27, 208, 249);
+    margin: 5% 10%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .container-order > ul:nth-child(2) > li > button {
+    margin: 10%;
+    width: 90%;
+    font-weight: bold;
+    border-radius: 1vh;
+    color: white;
+    width: -moz-fit-content;
+    border: 1.5px solid rgb(27, 208, 249);
+    padding: 15% 14%;
+    background: #1e1e1e;
+    font-size: 1.2em;
+    text-align: center;
+    transition: color 0.7s, background 0.7s, border 0.7s;
+  }
+  .container-order > ul:nth-child(5) > li > button {
+    animation: show 1s linear forwards;
+    margin: 10%;
+    width: 90%;
+    font-weight: bold;
+    border-radius: 1vh;
+    color: white;
+    width: -moz-fit-content;
+    border: 1.5px solid #1e1e1e;
+    padding: 15% 14%;
+    background: rgb(27, 208, 249);
+    font-size: 1.3em;
+    text-align: center;
+    transition: color 0.7s, background 0.7s, border 0.7s;
   }
 }
