--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -80,7 +80,7 @@
 
 @media screen and (max-width: 500px) {
   .container-login {
-    min-height: 24em;
+    min-height: 30em;
     border-radius: 1vh;
     border: 1.5px solid rgb(27, 208, 249);
     margin: 15% 15%;
@@ -90,4 +90,17 @@
     align-items: center;
     justify-content: center;
   }
+  .container-login > input {
+    border-radius: 0.7vh;
+    color: white;
+    border: 1.5px solid rgb(27, 208, 249);
+    width: -moz-fit-content;
+    width: fit-content;
+    min-width: 65%;
+    padding: 2% 5%;
+    background: none;
+    font-size: 0.7em;
+    text-align: center;
+    margin: 2em 0 1em 0;
+}
 }
