--- a/src/components/styles/spark.css
+++ b/src/components/styles/spark.css
@@ -27,7 +27,6 @@
   background: rgb(27, 208, 249);
   padding: 3% 4%;
   transition: background s;
-
 }
 .container-spark-thunder-div > div > h1 {
   width: fit-content;
@@ -64,4 +63,17 @@
   width: 100%;
   align-items: center;
   justify-content: center;
+}
+@media screen and (max-width: 500px) {
+  .container-spark {
+    padding-top: 2.5em;
+    min-height: 60vh;
+    border-radius: 1vh;
+    border: 1.5px solid rgb(27, 208, 249);
+    margin: 5% 15%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
