--- a/src/components/styles/cabinList.css
+++ b/src/components/styles/cabinList.css
@@ -29,14 +29,14 @@ h3 {
 }
 
 .container-list > div::-webkit-scrollbar-thumb:hover {
-cursor: pointer;
-background: rgb(12, 99, 118);
+  cursor: pointer;
+  background: rgb(12, 99, 118);
 }
 .container-list > div::-webkit-scrollbar-thumb {
-    background: rgb(27 208 249);
+  background: rgb(27 208 249);
 }
 .container-list > div::-webkit-scrollbar-track {
-    background: #f1f1f114;
+  background: #f1f1f114;
 }
 .container-list > div > div {
   border-radius: 1vh;
@@ -93,6 +93,24 @@ background: rgb(12, 99, 118);
   display: flex;
   width: fit-content;
   font-weight: bold;
+  /* border-radius: 0 1vh 1vh 0; */
+  color: white;
+  width: -moz-fit-content;
+  border: 1.5px solid rgb(27, 208, 249);
+  padding: 4% 6%;
+  background: #1e1e1e;
+  font-size: 0.9em;
+  text-align: center;
+  transition: color 0.7s, background 0.4s, border 0.7s;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+.container-list > div > div > div:nth-child(2) > button:nth-child(4) {
+  height: fit-content;
+  display: flex;
+  width: fit-content;
+  font-weight: bold;
   border-radius: 0 1vh 1vh 0;
   color: white;
   width: -moz-fit-content;
@@ -106,17 +124,21 @@ background: rgb(12, 99, 118);
   justify-content: center;
   align-items: center;
 }
+
 .container-list > div > div > div:nth-child(2) > button:nth-child(3):hover,
-.container-list > div > div > div:nth-child(2) > button:nth-child(2):hover {
+.container-list > div > div > div:nth-child(2) > button:nth-child(2):hover,
+.container-list > div > div > div:nth-child(2) > button:nth-child(4):hover {
   cursor: pointer;
 }
 .container-list > div > div > div:nth-child(2) > button:nth-child(3).active,
-.container-list > div > div > div:nth-child(2) > button:nth-child(2).active {
+.container-list > div > div > div:nth-child(2) > button:nth-child(2).active,
+.container-list > div > div > div:nth-child(2) > button:nth-child(4).active {
   background: rgb(27, 208, 249);
 }
 
 .container-list > div > div > div:nth-child(2) > button:nth-child(3) > svg,
-.container-list > div > div > div:nth-child(2) > button:nth-child(2) > svg {
+.container-list > div > div > div:nth-child(2) > button:nth-child(2) > svg,
+.container-list > div > div > div:nth-child(2) > button:nth-child(4) > svg {
   pointer-events: none;
 }
 @media screen and (max-width: 500px) {
@@ -131,5 +153,5 @@ background: rgb(12, 99, 118);
     align-items: center;
     justify-content: flex-start;
     height: 40em;
-}
+  }
 }
