--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,21 @@
+html {
+  height: 100vh;
+}
 body {
   background: #1e1e1e;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   width: 100%;
   min-height: 100vh;
 }
 .container {
+  padding-top: 3vh;
   width: 100%;
-  min-height: 100vh;
+  min-height: 97vh;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
