--- a/src/components/styles/cabinList.css
+++ b/src/components/styles/cabinList.css
@@ -30,7 +30,8 @@ h1 {
   width: 80%;
   justify-content: space-between;
   align-items: flex-start;
-  flex-direction: row;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
 }
 .container-list > div:nth-child(2) > button > svg,
 .container-list > div > ul > li > button > svg {
@@ -67,6 +68,84 @@ h1 {
   justify-content: flex-start;
   align-items: flex-start;
 }
+.filter-div {
+  margin: 2vh 0px;
+  overflow-x: clip;
+  height: 3vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  border-radius: 1vh;
+  padding: 2vh 0;
+  background: #2b2b2b;
+  justify-content: flex-start;
+  align-items: center;
+}
+.filter-div > ul {
+  opacity: 1;
+  width: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  transition: opacity 1s, width 1s;
+}
+
+.filter-div > button {
+  opacity: 1;
+  user-select: none;
+  height: 6vh;
+  display: flex;
+  width: -moz-fit-content;
+  width: 100%;
+  font-weight: bold;
+  border-radius: 1vh;
+  color: white;
+  border: 1.5px solid rgb(27, 208, 249);
+  padding: 2vh 1vh;
+  background: #1e1e1e;
+  font-size: 0.9em;
+  text-align: center;
+  transition: color 0.7s, background 0.4s, border 0.7s, width 0.8s, opacity 0.6s,
+    padding 0.8s;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
+}
+.filter-div > ul > li {
+  margin: 0 0.5vh;
+}
+.filter-div > button > svg {
+  pointer-events: none;
+  height: fit-content;
+  margin-right: 3%;
+}
+.filter-div > button:hover {
+  color: rgb(27, 208, 249);
+}
+.filter-div > ul > li > button {
+  height: fit-content;
+  display: flex;
+  width: fit-content;
+  font-weight: bold;
+  border-radius: 1vh;
+  color: white;
+  border: 1.5px solid rgb(27, 208, 249);
+  padding: 1vh 1vh;
+  background: #1e1e1e;
+  font-size: 0.9em;
+  text-align: center;
+  transition: color 0.7s, background 0.4s, border 0.7s;
+  justify-content: center;
+  align-items: center;
+}
+.filter-div > ul > li {
+  width: fit-content;
+}
+
 .container-list > div > ul > li {
   display: flex;
   width: 30%;
@@ -121,7 +200,7 @@ h1 {
 .container-list > div::-webkit-scrollbar-track {
   background: #f1f1f114;
 }
-.container-list > div > div {
+#cabinListDiv > div {
   border-radius: 1vh;
   padding: 2vh 0;
   margin: 2vh 0;
@@ -189,7 +268,8 @@ h1 {
   padding: 6% 8%;
 }
 .container-list > div > ul > li > button:hover,
-.container-list > div:nth-child(2) > button:hover {
+.container-list > div:nth-child(2) > button:hover,
+.filter-div > ul > li > button:hover {
   cursor: pointer;
   background: rgb(27, 208, 249);
 }
@@ -200,16 +280,24 @@ h1 {
 }
 .container-list > div > div > div:nth-child(2) > button:nth-child(3).active,
 .container-list > div > div > div:nth-child(2) > button:nth-child(2).active,
-.container-list > div > div > div:nth-child(2) > button:nth-child(4).active {
+.container-list > div > div > div:nth-child(2) > button:nth-child(4).active,
+.filter-div > ul > li > button.active {
   background: rgb(27, 208, 249);
 }
 
 .container-list > div > div > div:nth-child(2) > button:nth-child(3) > svg,
 .container-list > div > div > div:nth-child(2) > button:nth-child(2) > svg,
-.container-list > div > div > div:nth-child(2) > button:nth-child(4) > svg {
+.container-list > div > div > div:nth-child(2) > button:nth-child(4) > svg,
+.filter-div > ul > li > button:hover > svg {
   pointer-events: none;
 }
 @media screen and (max-width: 500px) {
+  .filter-div > button {
+    height: 5vh;
+  }
+  .filter-div {
+    height: 2vh;
+  }
   .container-list > div > ul > li > button:nth-child(1),
   .container-list > div > ul > li > button:nth-child(2),
   .container-list > div > ul > li > button:nth-child(3) {
@@ -235,7 +323,7 @@ h1 {
     width: 80%;
     justify-content: space-between;
     align-items: flex-end;
-    flex-direction: column-reverse;
+    flex-direction: row-reverse;
   }
   .container-list > div > ul {
     width: 100%;
