--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -36,7 +36,7 @@
 .h1-first-load {
   width: 0;
   opacity: 0;
-  animation: moveH1 0.4s .4s linear forwards;
+  animation: moveH1 0.4s 0.4s linear forwards;
   font-size: 2em;
   margin: 0;
   color: white;
@@ -45,7 +45,7 @@
 .container-login-logo > img {
   height: 3em;
   opacity: 0;
-  transition: opacity .8s;
+  transition: opacity 0.8s;
 }
 .container-login > input {
   border-radius: 0.7vh;
@@ -83,7 +83,7 @@
     min-height: 30em;
     border-radius: 1vh;
     border: 1.5px solid rgb(27, 208, 249);
-    margin: 15% 15%;
+    margin: 5% 15% 0 15%;
     width: 70%;
     display: flex;
     flex-direction: column;
@@ -102,5 +102,5 @@
     font-size: 0.7em;
     text-align: center;
     margin: 2em 0 1em 0;
-}
+  }
 }
