--- a/src/components/styles/exportData.css
+++ b/src/components/styles/exportData.css
@@ -1,6 +1,6 @@
 .container-export {
-  padding-bottom: 5vh;
-  min-height: 70vh;
+  padding: 3vh 0 2vh 0;
+  min-height: 80vh;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
   margin: 0% 15%;
@@ -9,4 +9,73 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+}
+.container-export > ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+.container-export > ul > li {
+  height: 2em;
+  border-radius: 1vh;
+  border: 1.5px solid rgb(27, 208, 249);
+  margin-top: 5%;
+  padding: 3% 5%;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
+.container-export > ul > li > img {
+  height: 0.8em;
+  border-radius: 3px;
+  padding: 1% 2%;
+  background: #1e1e1e;
+  transition: color 0.7s, background 0.7s, border 0.7s;
+  border: 1.5px solid rgb(27, 208, 249);
+}
+.container-export > ul > li > img:hover {
+  background: rgb(27, 208, 249);
+
+  cursor: pointer;
+}
+.container-export > ul > li > h2 {
+  width: 100%;
+  font-size: 1em;
+  color: white;
+  margin: 0% 6%;
+}
+.container-export > ul > li > button {
+  display: flex;
+  font-weight: bold;
+  border-radius: 0.5vh;
+  color: white;
+  border: 1.5px solid rgb(27, 208, 249);
+  width: fit-content;
+  padding: 1.5% 2%;
+  background: rgb(27, 208, 249);
+  font-size: 0.7em;
+  text-align: center;
+  transition: color 0.7s, background 0.7s, border 0.7s;
+  justify-content: center;
+  align-items: center;
+}
+.container-export > ul > li > button > svg {
+  stroke-width: 3px;
+}
+.container-export > ul > li > button:hover {
+  cursor: pointer;
+  color: rgb(27, 208, 249);
+  background: #1e1e1e;
+}
+@media screen and (max-width: 500px) {
+  .container-export > ul > li > h2 {
+    font-size: 0.75em;
+  }
 }
