--- a/src/components/styles/cabinList.css
+++ b/src/components/styles/cabinList.css
@@ -305,6 +305,7 @@ h1 {
   }
   .container-list {
     height: 80vh;
+    margin: 5% 10%;
   }
   .container-list > div:nth-child(4) {
     overflow-y: scroll;
