--- a/src/components/styles/exportData.css
+++ b/src/components/styles/exportData.css
@@ -1,6 +1,6 @@
 .container-export {
   padding: 3vh 0 2vh 0;
-  min-height: 80vh;
+  min-height: 70vh;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
   margin: 0% 15%;
@@ -77,5 +77,8 @@
 @media screen and (max-width: 500px) {
   .container-export > ul > li > h2 {
     font-size: 0.75em;
+  }
+  .container-export {
+    margin:5% 15%;
   }
 }
