--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@
   cursor: pointer;
 }
 .btn-go-back {
-  margin: 0 5%;
+  margin: 1.5vh 5% 0 5%;
   align-self: flex-end;
   background: #1e1e1e;
   display: flex;
