--- a/src/components/styles/exportData.css
+++ b/src/components/styles/exportData.css
@@ -1,5 +1,5 @@
 .container-export {
-  padding: 3vh 0 2vh 0;
+  padding: 0 0 2vh 0;
   min-height: 70vh;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
