--- a/src/components/styles/tableSave.css
+++ b/src/components/styles/tableSave.css
@@ -25,8 +25,17 @@
   min-width: fit-content;
   font-size: 1em;
 }
-input[type="time"]::-webkit-calendar-picker-indicator {
-  filter: invert(1); /* invert the color */
+.container-export > div > form > select {
+  text-align: center;
+  padding: 1.5vh 0% 1.5vh 0.8vh;
+  font-size: 0.7em;
+  min-width: 10%;
+  border-radius: 0.7vh;
+  width: fit-content;
+  margin: 0 5%;
+  background: #1e1e1e;
+  border: 1.5px solid rgb(27, 208, 249);
+  color: white;
 }
 .container-export > div > form > div > input {
   padding: 1.5vh 0% 1.5vh 0.8vh;
