--- a/src/components/styles/cabinOrder.css
+++ b/src/components/styles/cabinOrder.css
@@ -7,13 +7,12 @@
   }
 }
 .container-order {
-  padding: 0 5%;
   min-height: 24em;
   height: fit-content;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
   margin: 0% 10%;
-  width: 70%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,8 +33,9 @@
   transition: color 0.7s, background 0.7s, border 0.7s;
 }
 .container-order > div:nth-child(4) {
+  padding-left: 5%;
   display: flex;
-  width: 100%;
+  width: 95%;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
@@ -108,10 +108,10 @@ h2 {
   align-items: center;
 }
 .container-order > ul:nth-child(6) {
+  margin: 0 0 3vh 0;
   width: 80%;
   display: flex;
   padding: 0;
-  margin: 0;
   list-style: none;
   flex-direction: row;
   flex-wrap: wrap;
@@ -156,10 +156,10 @@ li {
     justify-content: space-evenly;
   }
   .container-order > ul:nth-child(6) {
-    width: 100%;
+    width: 80%;
     display: flex;
     padding: 0;
-    margin: 0;
+    margin: 0 0 3vh 0;
     list-style: none;
     flex-direction: row;
     flex-wrap: wrap;
@@ -168,14 +168,13 @@ li {
     align-items: center;
   }
   .container-order {
-    padding: 0 5%;
     min-height: 55vh;
     height: -moz-fit-content;
     height: fit-content;
     border-radius: 1vh;
     border: 1.5px solid rgb(27, 208, 249);
     margin: 5% 10%;
-    width: 70%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
