--- a/src/components/styles/tableSave.css
+++ b/src/components/styles/tableSave.css
@@ -124,7 +124,8 @@
   justify-content: center;
   align-items: center;
 }
-.container-export > div > button:hover {
+.container-export > div > button:hover,
+#btnImport:hover {
   cursor: pointer;
   background: rgb(27, 208, 249);
   color: black;
@@ -171,6 +172,24 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+}
+#btnImport {
+  margin: 3vh 0 3vh 0;
+  align-self: center;
+  background: #1e1e1e;
+  display: flex;
+  font-weight: bold;
+  border-radius: 0.5vh;
+  color: white;
+  border: 1.5px solid rgb(27, 208, 249);
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 1vh 2vh;
+  font-size: 0.7em;
+  text-align: center;
+  transition: color 0.7s, background 0.7s, border 0.7s, opacity 1s;
+  justify-content: center;
+  align-items: center;
 }
 @media screen and (max-width: 500px) {
   .container-export > #divTable,
