--- a/src/components/styles/tableSave.css
+++ b/src/components/styles/tableSave.css
@@ -215,7 +215,7 @@
   align-items: center;
 }
 @media screen and (max-width: 500px) {
-  .container-export > div > form > select {
+  .container-export > #divExport > form > select {
     width: 100%;
     margin: 0;
   }
