--- a/src/components/styles/options.css
+++ b/src/components/styles/options.css
@@ -1,5 +1,4 @@
 .container-options {
-  padding-bottom: 5vh;
   min-height: fit-content;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
@@ -17,15 +16,15 @@
   align-items: center;
   justify-content: center;
   margin: 0;
-  padding: 0;
+  padding: 0 0 4vh 0;
   width: 100%;
 }
 .container-options > ul > li {
   height: 2em;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
-  margin-top: 5%;
-  padding: 3% 5%;
+  margin-top: 2.5vh;
+  padding: 3vh 7vh;
   width: 70%;
   display: flex;
   flex-direction: row;
@@ -58,9 +57,9 @@
   color: white;
   border: 1.5px solid rgb(27, 208, 249);
   width: fit-content;
-  padding: 1.5% 2%;
+  padding: 1% 2%;
   background: rgb(27, 208, 249);
-  font-size: 0.7em;
+  font-size: 1em;
   text-align: center;
   transition: color 0.7s, background 0.7s, border 0.7s;
   justify-content: center;
@@ -99,15 +98,14 @@
   color: #1e1e1e;
 }
 .img-cabin > svg {
-  
 }
 @media screen and (max-width: 500px) {
   .container-options > ul > li > h2 {
-    font-size: 0.8em;
+    font-size: 0.84em;
     margin: 0 4%;
   }
   .container-options {
-    min-height: 60vh;
+    min-height: 80vh;
     border-radius: 1vh;
     border: 1.5px solid rgb(27, 208, 249);
     margin: 5% 10%;
@@ -116,5 +114,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+  }
+  .container-options > ul > li {
+    height: 3em;
+    margin-top: 3vh;
+    padding: 1% 7%;
+  }
+  .img-cabin,
+  .img-export-data,
+  .img-cabin-list,
+  .img-thunder {
+    font-size: 1.3em;
+  }
+  .container-options > ul > li > button {
+    padding: 2% 2%;
+    font-size: 1em;
   }
 }
