--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -16,7 +16,7 @@
   }
 }
 .container-login {
-  min-height: 24em;
+  min-height: 80vh;
   border-radius: 1vh;
   border: 1.5px solid rgb(27, 208, 249);
   margin: 0% 10%;
@@ -83,7 +83,7 @@
     min-height: 30em;
     border-radius: 1vh;
     border: 1.5px solid rgb(27, 208, 249);
-    margin: 5% 10% 0 10%;
+    margin: 5% 10%;
     width: 80%;
     display: flex;
     flex-direction: column;
